Fix styles on mobile devices

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -1,12 +1,18 @@
+\:root
+  --app-height: 100%
+
 @import base/normalize
 @import base/variables
 @import base/fonts
 
+html,
 body 
   background: $colorDark
   color: $colorLight
-  height: 100vh
   font-family: 'Roboto-Regular'
+  height: 100vh
+  @media not all and (hover:hover)
+    height: var(--app-height)
 
 .greetings
   position: absolute
@@ -56,13 +62,15 @@ body
             height: 20px
 
 .container
-  height: 100%
+  height: 100vh
   display: flex
   align-items: center
   justify-content: center
   @media (min-width: 320px) and (max-width: 480px)
     justify-content: flex-start
     padding-left: 40px
+  @media not all and (hover:hover)
+    height: var(--app-height)
   .welcome-message
     display: inline-block
     padding-bottom: 40px
@@ -71,6 +79,7 @@ body
     font-family: 'Roboto-Light'
     @media (min-width: 320px) and (max-width: 480px)
       font-size: 35px
+      padding-bottom: 70px
     @media (min-width: 481px) and (max-width: 767px) 
       font-size: 55px
     .colored
